[tool.poetry]
name = "circuits-benchmark"
version = "0.1.0"
description = "A benchmark for mechanistic discovery of circuits in Transformers"
authors = ["Iván Arcuschin Moreno <iarcuschin@gmail.com>", "Niels uit de Bos <nielius@gmail.com>"]
readme = "README.md"
packages = [{include = "benchmark"}]

[tool.poetry.dependencies]
python = "^3.10"
einops = "^0.7.0"
numpy = [{ version = "^1.21", python = "<3.10" },
         { version = "^1.26", python = ">=3.10" }]
torch = ">=2.2.0"
datasets = "^2.17"
transformers = "^4.37"
tokenizers = "^0.15.0"
tqdm = "^4.66"
pandas = "^2.2"
wandb = "^0.16"
torchtyping = "^0.1.4"
huggingface-hub = "^0.20"
cmapy = "^0.6.6"
networkx = "^3.1"
plotly = "^5.12.0"
kaleido = "0.2.1"
pygraphviz = "^1.11"
transformer-lens = "1.14.0"
typer = "^0.9.0"
cloudpickle = "^3.0.0"
argparse-dataclass = "^2.0.0"
chex = "^0.1.85"
dm-haiku = "^0.0.11"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
